bad/sub_invalid_types_string_void.example_compiler_output
ERROR
[1mbad/sub_invalid_types_string_void.lat:5:8: [1;31merror: [0;1msubtraction is defined only for int values, not `string` and `void`[m
	"abc" - foo();
	      [1;32m^[m
